<resources>
    <string name="app_name">DCCM</string>
    <string name="font_regular" translatable="false">font/Arial-Regular.ttf</string>
    <string name="font_bold" translatable="false">font/Arial-Bold.ttf</string>
    <string name="facebook_app_id" translatable="false">797888397048010</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb797888397048010</string>
    <string name="msg_under_developement">This feature is under development.</string>
    <string name="msg_alert_you_have_permission">You have deny  some permission , please go to setting and enable it.</string>
    <string name="msg_network_not_available">Please check your internet connection</string>
    <string name="msg_no_network_connection">No internet connection found. Check your connection or try again.</string>
    <string name="msg_login_faild">Mobile or password wrong</string>
    <string name="msg_progress_dialog">Loading…</string>
    <string name="msg_registration_faild">User Already Registered.</string>
    <string name="msg_connection_failed">Connection failed</string>
    <string name="msg_login_sucess">Login successful</string>
    <string name="msg_item_clicked">item clicked</string>
    <string name="msg_fb_login_sucess">Facebook login success</string>
    <string name="msg_fb_login_cancel">Facebook login cancel</string>
    <string name="msg_apply_clicked">Apply clicked</string>
    <string name="msg_reset_clicked">Reset clicked</string>
    <string name="msg_go_clicked">Go clicked</string>
    <string name="msg_more_pack_clicked">More Packs clicked</string>
    <string name="msg_recharge_successful">Your recharge is done.</string>
    <string name="msg_transfer_successful">Your transfer is successful.</string>
    <string name="msg_activation_successful">Your connection is activated successfully.</string>
    <string name="msg_new_connection">Order a SIM in 3 simple steps.</string>
    <string name="msg_make_my_plan">Please select connection type.</string>
    <string name="msg_new_bb_plan">Please select connection type.</string>
    <string name="msg_make_my_plan_detail">Your plan is not valid.</string>
    <string name="msg_make_my_plan_detail_plan_value_over">Your plan maximum price reached.</string>
    <string name="msg_empty_cart">Your Cart is empty.</string>
    <string name="msg_caputure_image">Please capture or select an image</string>
    <string name="msg_invalid_number">Invalid Social Security Number</string>
    <string name="lbl_press_again_to_exit">press again to exit</string>
    <string name="lbl_forgot_psw">Forgot password ?</string>
    <string name="lbl_sign_up"><u>New User ? Sign up</u></string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_shop_postpaid_service">Postpaid Service Plan</string>
    <string name="lbl_shop_prepaid_service">Prepaid Service Plan</string>
    <string name="lbl_shop_make_my_plan">Make My Plan</string>
    <string name="lbl_shop_recharge">Recharge</string>
    <string name="lbl_shop_device">Device</string>
    <string name="lbl_shop_mnp">MNP</string>
    <string name="lbl_shop_preaid_to_postpaid">Prepaid to Postpaid</string>
    <string name="lbl_order_details">Order Details</string>
    <string name="lbl_order_date">Order Date</string>
    <string name="lbl_order_total">Order Total</string>
    <string name="lbl_order_status">Order Status</string>
    <string name="lbl_shipment_details">Shipment Details</string>
    <string name="lbl_payment_information">Payment Information</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_billing_address">Billing Address</string>
    <string name="lbl_shipping_address">Shipping Address</string>
    <string name="lbl_store_address">Store Address</string>
    <string name="lbl_order_summary">Order Summary</string>
    <string name="lbl_items">items:</string>
    <string name="lbl_shipping_charges">Shipping charges:</string>
    <string name="lbl_total_before_tax">Total before tax:</string>
    <string name="lbl_tax">Tax:</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_shiping_method">Shipping method</string>
    <string name="lbl_service_experience">Service Experience</string>
    <string name="lbl_user_experience">User Experience</string>
    <string name="lbl_more_order_history">Order History</string>
    <string name="lbl_more_logout">Logout</string>
    <string name="lbl_check_now">Check how </string>
    <string name="lbl_create_account">CREATE ACCOUNT</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_already_have_account">Already have an account?</string>
    <string name="lbl_log_in"><u>LOG IN</u></string>
    <string name="lbl_update"><u>Update</u></string>
    <string name="lbl_grand_total">Grand Total:\u0020</string>
    <string name="lbl_no_item_found">No items in cart</string>
    <string name="lbl_select_delevery_type">Select delivery type</string>
    <string name="lbl_home_delivery_type">Home delivery</string>
    <string name="lbl_pick_up_from_store">Pickup from store</string>
    <string name="lbl_quantity">Quantity:\u0020</string>
    <string name="lbl_row_total">Row total:\u0020</string>
    <string name="lbl_price">Price:\u0020</string>
    <string name="lbl_plan">Plan</string>
    <string name="lbl_zero">0</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_additional_benefits">Basic benefits across all Postpaid Plans</string>
    <string name="lbl_additional_benefits_prepaid">Basic benefits across all Prepaid Plans</string>
    <string name="lbl_customer_uid">Customer UID</string>
    <string name="lbl_customer_uid_number">2908 4454 5628</string>
    <string name="lbl_customer_kyc_title">Customer Consent</string>
    <string name="lbl_customer_kuc_descrpition">I the holder of UID number 2908 4454 5628, here give my consent to Digital Commerce and Customer Management(DCCM) to obtain my UID, Name and FingerPrint/Iris for authentication with UIDAI. Digital Commerce and Customer Management (DCCM) has informed me that my identity information would only be used for Onboarding of DCCM.Subscriber and also informed that my biometrics will not be stored/shared and will be submitted to CIDR only for the purpose of the authentication.</string>
    <string name="lbl_kyc_success_msg">Costomer eKYC Successfully Submitted</string>
    <string name="lbl_order_received_success_msg">Your order pickup place selected successfully.</string>
    <string name="lbl_order_placed_successfully">Your order has been placed successfully.</string>
    <string name="lbl_same_adderess_for_shipping">Use same address for shipping</string>
    <string name="lbl_my_orders">My orders</string>
    <string name="lbl_order_no">Order No.\u0020</string>
    <string name="lbl_pincode_text">Deliver SIM card to</string>
    <string name="lbl_pincode_text1">Please enter your pincode for checking feasibility of the service in your area</string>
    <string name="lbl_mob_no">Mobile:</string>
    <string name="lbl_features">%s Features</string>
    <string name="lbl_tech_spec">%s Technical Specifications</string>
    <string name="lbl_order_number">Order No</string>
    <string name="lbl_transaction_no">Transaction No</string>
    <string name="lbl_paid">Paid</string>
    <string name="lbl_make_my_plan">Make My Plan</string>
    <string name="lbl_upto">Upto</string>
    <string name="lbl_use">Use</string>
    <string name="lbl_price_use">Use %s</string>
    <string name="lbl_my_plan">My Plan</string>
    <string name="lbl_new_connection">New Mobile Connection</string>
    <string name="lbl_new_broadband_connection">Fixed Line Connection</string>
    <string name="lbl_my_account">My Account</string>
    <string name="lbl_activation">Activation</string>
    <string name="lbl_recharge">Recharge</string>
    <string name="lbl_order_tracking">Order Tracking</string>
    <string name="lbl_choose_number_series">Number Series</string>
    <string name="lbl_select_type">Select type</string>
    <string name="lbl_all">All</string>
    <string name="lbl_free">Default</string>
    <string name="lbl_premium">Gold</string>
    <string name="lbl_sort_by">Sort By Price:</string>
    <string name="lbl_lth">Low to High</string>
    <string name="lbl_htl">High to Low</string>
    <string name="lbl_enter_amount">Enter amount</string>
    <string name="lbl_view_other_packs">View other packs</string>
    <string name="lbl_recommended">Recommended</string>
    <string name="lbl_recharge_to">Recharge to number</string>
    <string name="lbl_transfer_to">Transfer to number</string>
    <string name="lbl_recharge_amount">Recharge amount</string>
    <string name="lbl_transfer_amount">Transfer amount</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_free_benefits">FREE benefits</string>
    <string name="lbl_worth">Worth $ </string>
    <string name="lbl_select_time">Select delivery time</string>
    <string name="lbl_receive_otp_for_varification">You will receive OTP for verification</string>
    <string name="lbl_otp_has_bin_sent_to_num">OTP has been sent Successfully to your number ending with *******</string>
    <string name="lbl_otp_has_bin_sent_to_email">OTP has been sent Successfully to your email address which is linked to number ending with *******</string>
    <string name="lbl_num_with_stars">*******</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_resend_otp"><u>Resend OTP</u></string>
    <string name="lbl_plan_price">Price</string>
    <string name="lbl_of">out of\u0020</string>
    <string name="lbl_left">left</string>
    <string name="lbl_mb">GB</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_login_with">Login With</string>
    <string name="lbl_internet"> Internet (GB)</string>
    <string name="lbl_internet_mb"> Internet (MB)</string>
    <string name="lbl_call">Call (Minutes - On Net)</string>
    <string name="lbl_sms">SMS</string>
    <string name="lbl_roaming">Roaming (Minutes - Off Net)</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_expiry_date">Expiry Date</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_please_wait_making_transaction">Please wait while we are making transaction</string>
    <string name="lbl_enter_id">Social Security Number</string>
    <string name="lbl_select_image_id_proof">Select or capture photo of id card</string>
    <string name="title_balance_transfer">Balance Transfer</string>
    <string name="btn_sign_up">CREATE ACCOUNT</string>
    <string name="btn_check_out">PROCEED TO CHECKOUT</string>
    <string name="btn_confirm">Confirm</string>
    <string name="menu_usage">Usage</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_recharge">Recharge</string>
    <string name="menu_activation">Activation</string>
    <string name="menu_order_tracking">Order Tracking</string>
    <string name="menu_more">More</string>
    <string name="hint_lbl_name">Name</string>
    <string name="hint_lbl_fname">First Name</string>
    <string name="hint_lbl_lname">Last Name</string>
    <string name="hint_lbl_email">Email</string>
    <string name="hint_lbl_mobile">Mobile No</string>
    <string name="hint_lbl_password">Password</string>
    <string name="hint_lbl_address1">Address1</string>
    <string name="hint_lbl_address2">Address2</string>
    <string name="hint_lbl_city">Address3</string>
    <string name="hint_lbl_state">Province</string>
    <string name="hint_lbl_country">Country</string>
    <string name="hint_lbl_pin">Post Code</string>
    <string name="lbl_payment_date">Payment Date</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_amount">Amount</string>
</resources>