<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_usage"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_cart"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/nav_recharge"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_recharge"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/nav_activation"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_activation"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/nav_order_traking"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_order_tracking"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_more"
            android:title="@string/menu_more"
            app:showAsAction="always|withText">

        </item>

    </group>
</menu>
