<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_header">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/scrollable_toolbar" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollMainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_margin="@dimen/app_margin"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_corner"
                android:orientation="vertical"
                android:padding="@dimen/app_padding">



                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/lbl_enter_id" />


                <TextView
                    android:id="@+id/tvNumber"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="FNAME" />



                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_name" />


                <TextView
                    android:id="@+id/tvName"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="FNAME" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_mobile" />

                <TextView
                    android:id="@+id/tvMobile"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="mobile" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_address1" />


                <TextView
                    android:id="@+id/tvAddress1"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getAddressLine1" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_address2" />

                <TextView
                    android:id="@+id/tvAddress2"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getAddressLine2" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_city" />


                <TextView
                    android:id="@+id/tvCity"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getCity" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_state" />


                <TextView
                    android:id="@+id/tvState"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getState" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_country" />

                <TextView
                    android:id="@+id/tvCountry"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getCountry" />

                <TextView
                    style="@style/AppTheme.TextView.KycDetailsLabel"
                    android:text="@string/hint_lbl_pin" />

                <TextView
                    android:id="@+id/tvPin"
                    style="@style/AppTheme.TextView.KycDetails"
                    android:text="getpin" />

                <CheckBox
                    android:id="@+id/chkUseAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_edittext_margin_top"
                    android:text="@string/lbl_same_adderess_for_shipping"
                    android:textSize="@dimen/app_text_regular_medium" />

                <Button
                    android:id="@+id/btnProceed"
                    style="@style/AppTheme.Button"
                    android:layout_marginBottom="@dimen/app_btn_margin"
                    android:layout_marginTop="@dimen/app_edittext_margin_top"
                    android:text="@string/btn_confirm" />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <include
            android:id="@+id/extra_view"
            layout="@layout/layout_extra_view"
            android:layout_below="@+id/toolbar"
            tools:visibility="gone" />
    </android.support.design.widget.CoordinatorLayout>
</layout>