<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout

        android:id="@+id/parent"
        style="@style/match_match"
        android:orientation="vertical"
        tools:context="com.unboxdeals.activity.LoginActivity">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/ic_company"
                android:clickable="true"
                />


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollMainContainer"
            style="@style/match_wrap">

            <LinearLayout
                style="@style/match_wrap"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_company_logo_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_company" />


                <TextView
                    style="@style/AppTheme.TextView"
                    android:layout_margin="@dimen/app_margin_max"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lbl_create_account"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/app_text_max_medium" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iedtFirstName"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginTop="@dimen/app_edittext_margin_top">

                    <EditText
                        android:id="@+id/edtFirstName"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/hint_lbl_fname"
                        android:inputType="textCapSentences|textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iedtLastName"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginTop="@dimen/app_edittext_margin_top">

                    <EditText
                        android:id="@+id/edtLastName"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/hint_lbl_lname"
                        android:inputType="textCapSentences|textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iedtMobileNo"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginTop="@dimen/app_edittext_margin_top">

                    <EditText
                        android:id="@+id/edtMobileNo"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/hint_lbl_mobile"
                        android:inputType="number"
                        android:maxLength="10"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    style="@style/AppTheme.TextView"
                    android:layout_margin="@dimen/app_margin_max"
                    android:text="@string/lbl_gender"
                    />
                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/app_margin"
                        android:text="@string/lbl_male"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/app_margin"
                        android:text="@string/lbl_female"/>
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iedtEmailId"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginTop="@dimen/app_edittext_margin_top">

                    <EditText
                        android:id="@+id/edtEmailId"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/hint_lbl_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iedtPassword"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginTop="@dimen/app_edittext_margin_top">

                    <EditText
                        android:id="@+id/edtPassword"
                        style="@style/AppTheme.EditText"
                        android:drawableRight="@drawable/show_hide_pw_wrapped"
                        android:drawableEnd="@drawable/show_hide_pw_wrapped"
                        android:hint="@string/hint_lbl_password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    style="@style/wrap_wrap"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tvdonthaveaccount"
                        style="@style/AppTheme.TextView"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_already_have_account" />

                    <TextView
                        android:id="@+id/tvSignIn"
                        style="@style/AppTheme.TextView"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="@dimen/_1sdp"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_toRightOf="@+id/tvdonthaveaccount"
                        android:layout_toEndOf="@id/tvdonthaveaccount"
                        android:text="@string/lbl_log_in"
                         />
                </RelativeLayout>


                <Button
                    android:id="@+id/btnRegister"
                    style="@style/AppTheme.Button"
                    android:layout_margin="@dimen/app_btn_margin"
                    android:text="@string/btn_sign_up" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>
</layout>