<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <RelativeLayout
        android:id="@+id/mainframcart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sterlite.dccmappfordealersterlite.customView.CustomRecyclerView
            android:id="@+id/recycleCart"
            style="@style/match_wrap"
            android:layout_above="@id/lltotal"
            android:layout_alignParentTop="true"
           />


        <LinearLayout
            android:id="@+id/lltotal"
            style="@style/match_wrap"
            android:layout_gravity="bottom"
            android:background="@color/app_bg_color"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                style="@style/match_wrap"
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginLeft="@dimen/app_margin"
                android:gravity="start|left"
                >
                <TextView
                    android:id="@+id/tvLblDelivery"
                    android:layout_alignParentTop="true"
                    style="@style/AppTheme.TextView"
                    android:text="@string/lbl_select_delevery_type"
                    android:textSize="@dimen/app_text_regular_medium"

                    />
                <RadioGroup
                    android:layout_below="@id/tvLblDelivery"
                    android:id="@+id/rgDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RadioButton
                        android:id="@+id/rbHomeDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                      android:text="@string/lbl_home_delivery_type"
                        android:checked="true"
                        android:textSize="@dimen/app_text_medium_high"/>
                    <RadioButton
                        android:id="@+id/rbStorePickUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/app_text_medium_high"
                        android:text="@string/lbl_pick_up_from_store"/>
                </RadioGroup>

                <TextView
                    android:layout_below="@id/rgDelivery"
                    android:id="@+id/tvGrandTotal"
                    style="@style/AppTheme.TextView"
                    android:text="@string/lbl_grand_total"
                    android:textSize="@dimen/app_text_medium_high"
                    />

                <TextView
                    android:id="@+id/tvGrandPrice"
                    style="@style/AppTheme.TextView"
                    android:layout_toEndOf="@id/tvGrandTotal"
                    android:layout_toRightOf="@+id/tvGrandTotal"
                    android:layout_alignBaseline="@id/tvGrandTotal"
                    android:textSize="@dimen/app_text_regular_medium"
                    />


            </RelativeLayout>

            <Button
                android:id="@+id/btncheckout"
                style="@style/AppTheme.Button"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/btn_check_out"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tvNoFound"
            style="@style/AppTheme.TextView.NotFound"
            android:text="@string/lbl_no_item_found" />

    </RelativeLayout>
</layout>