<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_4sdp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

<!--

                <TextView
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:text="@string/lbl_payment_number" />
-->

                <TextView
                    android:id="@+id/tv_payment_number"
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:layout_width="match_parent"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:text="@string/lbl_payment_date" />

                <TextView
                    android:id="@+id/tv_payment_date"
                    style="@style/AppTheme.TextView.SmallRecharge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:text="@string/lbl_payment_mode" />

                <TextView
                    android:id="@+id/tv_payment_mode"
                    style="@style/AppTheme.TextView.SmallRecharge" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:text="@string/lbl_status" />

                <TextView
                    android:id="@+id/tv_status"
                    style="@style/AppTheme.TextView.SmallRecharge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">
                <TextView
                    style="@style/AppTheme.TextView.RechargeHistory"
                    android:text="@string/lbl_amount" />

                <TextView
                    android:id="@+id/tv_amount"
                    style="@style/AppTheme.TextView.SmallRecharge" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</layout>

